Closed
Bug 1623208
Opened 5 years ago
Closed 5 years ago
Intermittent tp5o_webext | application crashed [@ mozilla::ipc::MessageChannel::Send(IPC::Message*)]
Categories
(WebExtensions :: Request Handling, defect, P1)
WebExtensions
Request Handling
Tracking
(firefox-esr68 wontfix, firefox74 wontfix, firefox75 wontfix, firefox76 wontfix, firefox77 fixed)
RESOLVED
FIXED
mozilla77
People
(Reporter: intermittent-bug-filer, Assigned: mixedpuppy)
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
Filed by: btara [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=293524372&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cwpGmxDlToWVtZ8e09TN8Q/runs/0/artifacts/public/logs/live_backing.log
...
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 |
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 | [#47] xunlei.com/xunlei.com/index.html Cycles:25 Average:362.28 Median:361.00 stddev:21.41 (5.9%) stddev-sans-first:18.38
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 | Values: 418.0 393.0 382.0 378.0 378.0 378.0 357.0 349.0 325.0 380.0 362.0 334.0 338.0 328.0 371.0 351.0 350.0 379.0 343.0 371.0 351.0 361.0 352.0 360.0 368.0
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 |
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 | [#48] yelp.com/www.yelp.com/biz/alexanders-steakhouse-cupertino.html Cycles:25 Average:238.68 Median:234.00 stddev:16.30 (7.0%) stddev-sans-first:10.60
[task 2020-03-17T16:28:50.304Z] 16:28:50 INFO - PID 7282 | Values: 299.0 254.0 222.0 231.0 244.0 243.0 232.0 223.0 249.0 222.0 243.0 229.0 224.0 235.0 231.0 265.0 235.0 246.0 232.0 240.0 232.0 234.0 242.0 228.0 232.0
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 |
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | [#49] youku.com/www.youku.com/index.html Cycles:25 Average:396.84 Median:398.00 stddev:11.98 (3.0%) stddev-sans-first:12.15
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | Values: 390.0 398.0 417.0 398.0 400.0 386.0 405.0 404.0 393.0 392.0 410.0 387.0 391.0 379.0 407.0 406.0 402.0 407.0 377.0 401.0 419.0 392.0 369.0 401.0 390.0
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 |
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | [#50] youtube.com/www.youtube.com/music.html Cycles:25 Average:219.96 Median:224.00 stddev:14.37 (6.4%) stddev-sans-first:14.60
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | Values: 227.0 226.0 224.0 217.0 233.0 221.0 229.0 213.0 195.0 223.0 226.0 195.0 213.0 233.0 230.0 239.0 227.0 233.0 233.0 215.0 184.0 222.0 231.0 217.0 193.0
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | -------- Summary: end --------
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 |
[task 2020-03-17T16:28:50.306Z] 16:28:50 INFO - PID 7282 | MOZ_EVENT_TRACE sample 1584462530302 23.462303
[task 2020-03-17T16:28:50.362Z] 16:28:50 INFO - PID 7282 | MOZ_EVENT_TRACE stop 1584462530356
[task 2020-03-17T16:28:50.619Z] 16:28:50 INFO - TEST-INFO | 7282: exit 0
[task 2020-03-17T16:28:50.736Z] 16:28:50 INFO - mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eccDSVLMT1WO-ebqyFiRBg/artifacts/public/build/target.crashreporter-symbols.zip
[task 2020-03-17T16:28:55.025Z] 16:28:55 INFO - mozcrash Copy/paste: /home/cltbld/tasks/task_1584461043/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmp8utRjX/profile/minidumps/3b8a3b74-7e0d-8b08-b523-d117120ca167.dmp /tmp/tmp_qTMO9
[task 2020-03-17T16:28:58.522Z] 16:28:58 INFO - mozcrash Saved minidump as /home/cltbld/tasks/task_1584461043/build/blobber_upload_dir/3b8a3b74-7e0d-8b08-b523-d117120ca167.dmp
[task 2020-03-17T16:28:58.523Z] 16:28:58 INFO - mozcrash Saved app info as /home/cltbld/tasks/task_1584461043/build/blobber_upload_dir/3b8a3b74-7e0d-8b08-b523-d117120ca167.extra
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - PROCESS-CRASH | tp5o_webext | application crashed [@ mozilla::ipc::MessageChannel::Send(IPC::Message*)]
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - Crash dump filename: /tmp/tmp8utRjX/profile/minidumps/3b8a3b74-7e0d-8b08-b523-d117120ca167.dmp
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - Mozilla crash reason: MOZ_RELEASE_ASSERT(mWorkerThread == PR_GetCurrentThread()) (not on worker thread!)
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - Operating system: Linux
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - 0.0.0 Linux 4.4.0-66-generic #87-Ubuntu SMP Fri Mar 3 15:29:05 UTC 2017 x86_64
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - CPU: amd64
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - family 6 model 94 stepping 3
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - 8 CPUs
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - GPU: UNKNOWN
[task 2020-03-17T16:28:58.524Z] 16:28:58 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - Crash address: 0x0
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - Process uptime: not available
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - Thread 2 (crashed)
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - 0 libxul.so!mozilla::ipc::MessageChannel::Send(IPC::Message*) [MessageChannel.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 0 + 0x11]
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rax = 0x00007fca4cf8a7cf rdx = 0x00007fca45d91a30
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rcx = 0x000055a1cb0cf890 rbx = 0x00007fca589155e0
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rsi = 0x0000000000000001 rdi = 0x0000000000000020
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rbp = 0x0000000000000004 rsp = 0x00007fca45d90840
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - r8 = 0x0000000000000000 r9 = 0x0000000000000000
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - r10 = 0x00000000ffffffff r11 = 0x00007fca33e002a8
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r12 = 0x0000000000000000 r13 = 0x00007fca589c7110
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r14 = 0x00007fca33e0ec10 r15 = 0x00007fca33e0ec10
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rip = 0x00007fca4b0d952b
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - Found by: given as instruction pointer in context
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - 1 libxul.so!mozilla::ipc::IProtocol::ChannelSend(IPC::Message*) [ProtocolUtils.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 473 + 0xc]
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rbx = 0x00007fca46225ae0 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rsp = 0x00007fca45d908d0 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x00007fca33059000
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r15 = 0x00007fca33e0ec10 rip = 0x00007fca4b0dc038
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - 2 libxul.so!mozilla::net::PHttpChannelChild::SendCancel(nsresult const&) [PHttpChannelChild.cpp: : 159 + 0xb]
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rbx = 0x00007fca46225ae0 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rsp = 0x00007fca45d908e0 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x00007fca33059000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r15 = 0x00007fca33e0ec10 rip = 0x00007fca482069e8
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - 3 libxul.so!mozilla::net::HttpChannelChild::Cancel(nsresult) [HttpChannelChild.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 2293 + 0x8]
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rbx = 0x00007fca33059000 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rsp = 0x00007fca45d90920 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r15 = 0x00007fca46271200 rip = 0x00007fca48049fb9
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - Found by: call frame info
...
![]() |
||
Comment 1•5 years ago
|
||
Sorry, not sure about the product and component here.
Updated•5 years ago
|
Component: Talos → IPC
Product: Testing → Core
Version: Version 3 → unspecified
Comment 2•5 years ago
|
||
IPC is also used by networking. And there is PHttpChannelChild
in the stack.
Component: IPC → Networking: HTTP
Comment 3•5 years ago
|
||
According to the failed log below, HttpChannelChild::Cancel
is called on socket transport thread here.
This is wrong, since HttpChannelChild::Cancel
can only be called on main thread.
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - Thread 2 (crashed)
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - 0 libxul.so!mozilla::ipc::MessageChannel::Send(IPC::Message*) [MessageChannel.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 0 + 0x11]
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rax = 0x00007fca4cf8a7cf rdx = 0x00007fca45d91a30
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rcx = 0x000055a1cb0cf890 rbx = 0x00007fca589155e0
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rsi = 0x0000000000000001 rdi = 0x0000000000000020
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - rbp = 0x0000000000000004 rsp = 0x00007fca45d90840
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - r8 = 0x0000000000000000 r9 = 0x0000000000000000
[task 2020-03-17T16:28:58.525Z] 16:28:58 INFO - r10 = 0x00000000ffffffff r11 = 0x00007fca33e002a8
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r12 = 0x0000000000000000 r13 = 0x00007fca589c7110
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r14 = 0x00007fca33e0ec10 r15 = 0x00007fca33e0ec10
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rip = 0x00007fca4b0d952b
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - Found by: given as instruction pointer in context
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - 1 libxul.so!mozilla::ipc::IProtocol::ChannelSend(IPC::Message*) [ProtocolUtils.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 473 + 0xc]
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rbx = 0x00007fca46225ae0 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rsp = 0x00007fca45d908d0 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x00007fca33059000
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - r15 = 0x00007fca33e0ec10 rip = 0x00007fca4b0dc038
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - 2 libxul.so!mozilla::net::PHttpChannelChild::SendCancel(nsresult const&) [PHttpChannelChild.cpp: : 159 + 0xb]
[task 2020-03-17T16:28:58.526Z] 16:28:58 INFO - rbx = 0x00007fca46225ae0 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rsp = 0x00007fca45d908e0 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x00007fca33059000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r15 = 0x00007fca33e0ec10 rip = 0x00007fca482069e8
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - 3 libxul.so!mozilla::net::HttpChannelChild::Cancel(nsresult) [HttpChannelChild.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 2293 + 0x8]
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rbx = 0x00007fca33059000 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rsp = 0x00007fca45d90920 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x0000000000000004
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - r15 = 0x00007fca46271200 rip = 0x00007fca48049fb9
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - 4 libxul.so!non-virtual thunk to mozilla::net::HttpChannelChild::Cancel(nsresult) [HttpChannelChild.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 0 + 0xa]
[task 2020-03-17T16:28:58.527Z] 16:28:58 INFO - rbx = 0x00007fca32a7f000 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - rsp = 0x00007fca45d90950 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x0000000000000004
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - r15 = 0x00007fca46271200 rip = 0x00007fca4804e34a
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - Found by: call frame info
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - 5 libxul.so!mozilla::extensions::StreamFilterParent::ActorDestroy(mozilla::ipc::IProtocol::ActorDestroyReason) [StreamFilterParent.cpp:7ce722cb38c478e37a3ee025a1c0c0c4c27dbb00 : 725 + 0x2f]
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - rbx = 0x00007fca32a7f000 rbp = 0x0000000000000004
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - rsp = 0x00007fca45d90960 r12 = 0x0000000000000000
[task 2020-03-17T16:28:58.528Z] 16:28:58 INFO - r13 = 0x0000000000000000 r14 = 0x0000000000000004
[task 2020-03-17T16:28:58.529Z] 16:28:58 INFO - r15 = 0x00007fca46271200 rip = 0x00007fca4a497469
[task 2020-03-17T16:28:58.529Z] 16:28:58 INFO - Found by: call frame info
Component: Networking: HTTP → Request Handling
Product: Core → WebExtensions
Comment hidden (Intermittent Failures Robot) |
Comment 5•5 years ago
|
||
The priority flag is not set for this bug.
:mixedpuppy, could you have a look please?
For more information, please visit auto_nag documentation.
Flags: needinfo?(mixedpuppy)
Assignee | ||
Comment 6•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → mixedpuppy
Status: NEW → ASSIGNED
Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(mixedpuppy)
Assignee | ||
Updated•5 years ago
|
Priority: -- → P1
Assignee | ||
Comment 7•5 years ago
|
||
Pushed by scaraveo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/eeb5e5e45ca0
run channel cancel on main thread in streamfilter r=kershaw
![]() |
||
Comment 9•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•5 years ago
|
status-firefox74:
--- → wontfix
status-firefox75:
--- → wontfix
status-firefox76:
--- → wontfix
status-firefox-esr68:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•