Bug 1623208 run channel cancel on main thread in streamfilter r=kershaw

Differential Revision: https://phabricator.services.mozilla.com/D69650

--HG--
extra : moz-landing-system : lando